--- a/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
+++ b/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
@@ -1,4 +1,5 @@
 ---
+# Source: collectorforopenshift/templates/collectorforopenshift.yaml
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -10,29 +11,7 @@ metadata:
     openshift.io/description: 'Monitoring OpenShift in Splunk, built by Outcold Solutions'
     openshift.io/display-name: 'Collector for OpenShift'
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
-metadata:
-  name: configurations.collectord.io
-spec:
-  group: collectord.io
-  versions:
-    - name: v1
-      served: true
-      storage: true
-  scope: Cluster
-  names:
-    plural: configurations
-    singular: configuration
-    kind: Configuration
----
-apiVersion: scheduling.k8s.io/v1beta1
-kind: PriorityClass
-metadata:
-  name: collectorforopenshift-critical
-value: 1000000000
-
----
+# Source: collectorforopenshift/templates/collectorforopenshift.yaml
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -41,101 +20,7 @@ metadata:
   name: collectorforopenshift
   namespace: collectorforopenshift
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: Cluster
-metadata:
-  labels:
-    app: collectorforopenshift
-  name: collectorforopenshift
-rules:
-- apiGroups:
-  - ""
-  - apps
-  - batch
-  - extensions
-  - monitoring.coreos.com
-  - etcd.database.coreos.com
-  - vault.security.coreos.com
-  - apps.openshift.io
-  - build.openshift.io
-  - operator.openshift.io
-  - tuned.openshift.io
-  - operators.coreos.com
-  - certmanager.k8s.io
-  - kafka.strimzi.io
-  - org.eclipse.che
-  - dynatrace.com
-  - template.openshift.io
-  - nats.io
-  - syndesis.io
-  - collectord.io
-  resources:
-  - alertmanagers
-  - buildconfigs
-  - builds
-  - cronjobs
-  - daemonsets
-  - deploymentconfigs
-  - deployments
-  - endpoints
-  - events
-  - jobs
-  - namespaces
-  - nodes
-  - nodes/metrics
-  - nodes/proxy
-  - pods
-  - prometheuses
-  - replicasets
-  - replicationcontrollers
-  - scheduledjobs
-  - services
-  - statefulsets
-  - vaultservices
-  - etcdclusters
-  - challenges
-  - networks
-  - tuneds
-  - dnses
-  - catalogsources
-  - configmaps
-  - clusterserviceversions
-  - kafkas
-  - checlusters
-  - oneagents
-  - templateinstances
-  - natsclusters
-  - syndesises
-  - persistentvolumeclaims
-  - configurations
-  - dns
-  verbs:
-  - get
-  - list
-  - watch
-- nonResourceURLs:
-  - /metrics
-  verbs:
-  - get
-  apiGroups: []
-  resources: []
----
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: ClusterRoleBinding
-metadata:
-  labels:
-    app: collectorforopenshift
-  name: collectorforopenshift
-  namespace: collectorforopenshift
-roleRef:
-  kind: ClusterRole
-  name: collectorforopenshift
-  apiGroup: rbac.authorization.k8s.io
-subjects:
-  - kind: ServiceAccount
-    name: collectorforopenshift
-    namespace: collectorforopenshift
----
+# Source: collectorforopenshift/templates/collectorforopenshift.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -1111,8 +996,122 @@ data:
 
     # set output (splunk or devnull, default is [general]defaultOutput)
     output =
-
 ---
+# Source: collectorforopenshift/templates/collectorforopenshift.yaml
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: configurations.collectord.io
+spec:
+  group: collectord.io
+  versions:
+    - name: v1
+      served: true
+      storage: true
+  scope: Cluster
+  names:
+    plural: configurations
+    singular: configuration
+    kind: Configuration
+---
+# Source: collectorforopenshift/templates/collectorforopenshift.yaml
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRole
+metadata:
+  labels:
+    app: collectorforopenshift
+  name: collectorforopenshift
+rules:
+- apiGroups:
+  - ""
+  - apps
+  - batch
+  - extensions
+  - monitoring.coreos.com
+  - etcd.database.coreos.com
+  - vault.security.coreos.com
+  - apps.openshift.io
+  - build.openshift.io
+  - operator.openshift.io
+  - tuned.openshift.io
+  - operators.coreos.com
+  - certmanager.k8s.io
+  - kafka.strimzi.io
+  - org.eclipse.che
+  - dynatrace.com
+  - template.openshift.io
+  - nats.io
+  - syndesis.io
+  - collectord.io
+  resources:
+  - alertmanagers
+  - buildconfigs
+  - builds
+  - cronjobs
+  - daemonsets
+  - deploymentconfigs
+  - deployments
+  - endpoints
+  - events
+  - jobs
+  - namespaces
+  - nodes
+  - nodes/metrics
+  - nodes/proxy
+  - pods
+  - prometheuses
+  - replicasets
+  - replicationcontrollers
+  - scheduledjobs
+  - services
+  - statefulsets
+  - vaultservices
+  - etcdclusters
+  - challenges
+  - networks
+  - tuneds
+  - dnses
+  - catalogsources
+  - configmaps
+  - clusterserviceversions
+  - kafkas
+  - checlusters
+  - oneagents
+  - templateinstances
+  - natsclusters
+  - syndesises
+  - persistentvolumeclaims
+  - configurations
+  - dns
+  verbs:
+  - get
+  - list
+  - watch
+- nonResourceURLs:
+  - /metrics
+  verbs:
+  - get
+  apiGroups: []
+  resources: []
+---
+# Source: collectorforopenshift/templates/collectorforopenshift.yaml
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRoleBinding
+metadata:
+  labels:
+    app: collectorforopenshift
+  name: collectorforopenshift
+  namespace: collectorforopenshift
+roleRef:
+  kind: ClusterRole
+  name: collectorforopenshift
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+  - kind: ServiceAccount
+    name: collectorforopenshift
+    namespace: collectorforopenshift
+---
+# Source: collectorforopenshift/templates/collectorforopenshift.yaml
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
@@ -1280,6 +1279,7 @@ spec:
           - key: 002-daemonset.conf
             path: 002-daemonset.conf
 ---
+# Source: collectorforopenshift/templates/collectorforopenshift.yaml
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
@@ -1430,6 +1430,7 @@ spec:
           - key: 003-daemonset-master.conf
             path: 003-daemonset-master.conf
 ---
+# Source: collectorforopenshift/templates/collectorforopenshift.yaml
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
@@ -1493,3 +1494,10 @@ spec:
             path: 001-general.conf
           - key: 004-addon.conf
             path: 004-addon.conf
+---
+# Source: collectorforopenshift/templates/collectorforopenshift.yaml
+apiVersion: scheduling.k8s.io/v1beta1
+kind: PriorityClass
+metadata:
+  name: collectorforopenshift-critical
+value: 1000000000
