--- a/argocdod/apps/quay-enterprise/templates/quay-enterprise.yaml
+++ b/argocdod/apps/quay-enterprise/templates/quay-enterprise.yaml
@@ -73,11 +73,12 @@ type: Opaque
 # Source: quay-enterprise/templates/08_quayconfigfile.yaml
 apiVersion: v1
 stringData:
-  FEATURE_PARTIAL_USER_AUTOCOMPLETE: "{{ .Values.CR.secrets.quay.config.user_autocomplete }}"
-  APP_SPECIFIC_TOKEN_EXPIRATION: "{{ .Values.CR.secrets.quay.config.token_EXP }}"
-  FEATURE_ANONYMOUS_ACCESS: "{{ .Values.CR.secrets.quay.config.anonymous }}"
-  FEATURE_REQUIRE_ENCRYPTED_BASIC_AUTH: "{{ .Values.CR.secrets.quay.config.requrie_ENCRYP }}"
-  FEATURE_INVITE_ONLY_USER_CREATION: "{{ .Values.CR.secrets.quay.config.users_Creation }}"
+  config2.yaml: |
+    FEATURE_PARTIAL_USER_AUTOCOMPLETE: "{{ .Values.CR.secrets.quay.config.user_autocomplete }}"
+    APP_SPECIFIC_TOKEN_EXPIRATION: "{{ .Values.CR.secrets.quay.config.token_EXP }}"
+    FEATURE_ANONYMOUS_ACCESS: "{{ .Values.CR.secrets.quay.config.anonymous }}"
+    FEATURE_REQUIRE_ENCRYPTED_BASIC_AUTH: "{{ .Values.CR.secrets.quay.config.requrie_ENCRYP }}"
+    FEATURE_INVITE_ONLY_USER_CREATION: "{{ .Values.CR.secrets.quay.config.users_Creation }}"
 kind: Secret
 metadata:
   annotations:
