--- a/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
+++ b/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
@@ -1514,7 +1514,7 @@ allowedCapabilities:
 allowedUnsafeSysctls:
 - '*'
 apiVersion: security.openshift.io/v1
-#defaultAddCapabilities: 0
+defaultAddCapabilities: []
 fsGroup:
   type: RunAsAny
 groups:
@@ -1530,9 +1530,9 @@ metadata:
       only for cluster administration. Grant with caution.'
 
   name: collectorforopenshift
-#priority: 0
+priority: 0
 readOnlyRootFilesystem: false
-#requiredDropCapabilities: 0
+requiredDropCapabilities: []
 runAsUser:
   type: RunAsAny
 seLinuxContext:
