--- a/argocdod/templates/nginxt.yaml
+++ b/argocdod/templates/nginxt.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginxt
+  name: nginxt-{{ template "cluster_name" . }}
   namespace: {{ .Values.argocdNamespace }}
 spec:
   destination:
