--- a/argocdod/templates/quay-enterprise.yaml
+++ b/argocdod/templates/quay-enterprise.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: quay-enterprise
+  name: quay-enterprise-{{ template "cluster_name" . }}
   namespace: {{ .Values.argocdNamespace }}
 spec:
   destination:
