--- a/argocdod/apps/minio-operator/templates/operator.yaml
+++ b/argocdod/apps/minio-operator/templates/operator.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: {{ .Values.namespace }}
+---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
