--- a/argocdod/apps/rh-sso/templates/sso74-x509-postgresql-persistent.yaml
+++ b/argocdod/apps/rh-sso/templates/sso74-x509-postgresql-persistent.yaml
@@ -89,6 +89,7 @@ spec:
   tls:
     termination: reencrypt
   to:
+    kind: Service
     name: {{ .Values.APPLICATION_NAME }}
 ---
 apiVersion: apps.openshift.io/v1
