--- a/argocdod/apps/nginxt/templates/nginxt.yaml
+++ b/argocdod/apps/nginxt/templates/nginxt.yaml
@@ -24,4 +24,4 @@ spec:
     spec:
       containers:
       - name: nginxt
-        image: "{{ .Values.image.registry }}.{{ .Values.cluster_name }}/{{ .Values.image.repo }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        image: "{{ .Values.image.registry }}.{{ .Values.cluster_fqdn }}/{{ .Values.image.repo }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
