--- a/argocdod/templates/nginxt.yaml
+++ b/argocdod/templates/nginxt.yaml
@@ -16,5 +16,5 @@ spec:
       valueFiles:
         - values.yaml
       parameters:
-        - name: cluster_name
+        - name: cluster_fqdn
           value: {{ template "cluster_fqdn" . }}
