--- a/ansible/quay-postjobs/quayPostInstall.yaml
+++ b/ansible/quay-postjobs/quayPostInstall.yaml
@@ -1,64 +1,82 @@
 ---
 
-- name: "Create container image repository for {{ Application }} and applying mirroring"
+- name: "Run postjobs for Quay installation"
   hosts: localhost
   gather_facts: yes
   become: false
   tasks:
-    - name: Create Repository
+    - name: "Get Quay and cookie /"
       uri:
-        url: "{{ QUAY_ENDPOINT }}/api/v1/repository"
+        url: "{{ QUAY_ENDPOINT }}/"
+        method: GET
+        validate_certs: no #delete when certs are trusted
+        headers:
+          Content-Type: application/json
+      register: login
+
+    - name: debug to view login output
+      debug: var=login
+
+    - name: "Get Quay and cookie"
+      uri:
+        url: "{{ QUAY_ENDPOINT }}/api/v1/user"
+        method: GET
+        validate_certs: no #delete when certs are trusted
+        headers:
+          Cookie: 'session={{ login.cookies.session }}'
+          Content-Type: application/json
+      register: login
+      ignore_errors: yes
+
+    - name: debug to view login output
+      debug: var=login
+
+    - name: "Login"
+      uri:
+        url: "{{ QUAY_ENDPOINT }}/api/v1/signin"
+        method: POST
+        validate_certs: no #delete when certs are trusted
+        body_format: json
+        headers:
+          X-CSRF-TOKEN: '{{ login.cookies.csrftoken }}'
+          Cookie: 'session={{ login.cookies.session }}'
+          Content-Type: application/json
+        body:
+          username: "cloudlet_admin"
+          password: "Password@123"
+
+    - name: "Create cloudlet Organization"
+      uri:
+        url: "{{ QUAY_ENDPOINT }}/api/v1/organization/"
         method: POST
         headers:
-          Authorization: "Bearer {{ QUAY_AUTH_TOKEN }}"
+          Authorization: "Basic Y2xvdWRsZXRfYWRtaW46UGFzc3dvcmRAMTIz"
         validate_certs: no #delete when certs are trusted
         body_format: json
         status_code: 201
+        return_content: yes
+        follow_redirects: yes
         body:
-          repo_kind: 'image'
-          namespace: "{{ organization }}"
-          visibility: "{{ visibillity }}"
-          repository: "{{ Application }}"
-          description: "A container repository for {{ Application }}"
-      register: result
-      ignore_errors: true
+          name: "{{ organization }}"
 
-    - name: Set repository state to Mirror
+    - name: "Create mgmt (managment) OAuth Application under cloudlet org"
       uri:
-        url: "{{ QUAY_ENDPOINT }}/api/v1/repository/{{ organization }}/{{ Application }}/changestate"
-        method: PUT
-        headers:
-          Authorization: "Bearer {{ QUAY_AUTH_TOKEN }}"
-        validate_certs: no
-        body_format: json
-        status_code: 200
-        body:
-          state: "MIRROR"
+          url: "{{ QUAY_ENDPOINT }}/api/v1/organization/{{ organization }}/applications"
+          method: POST
+          headers:
+            Authorization: "Bearer {{ QUAY_AUTH_TOKEN }}"
+          validate_certs: no #delete when certs are trusted
+          body_format: json
+          status_code: 201
+          body:
+            name: "mgmt"
 
-    - name: Configure Mirroring
-      uri:
-        url: "{{ QUAY_ENDPOINT }}/api/v1/repository/{{ organization }}/{{ Application }}/mirror"
-        method: POST
-        headers:
-          Authorization: "Bearer {{ QUAY_AUTH_TOKEN }}"
-        validate_certs: no
-        body_format: json
-        status_code: 201
-        body:
-          is_enabled: true
-          external_registry_config:
-            proxy:
-              https_proxy: ""
-              http_proxy: ""
-              no_proxy: ""
-            verify_tls: true
-          external_registry_username: "{{ UPSTREAM_USERNAME }}"
-          external_reference: "{{ REGISTRY }}/{{ organization }}/{{ Application }}"
-          sync_start_date: "{{ ansible_date_time['iso8601'] }}"
-          root_rule:
-            rule_kind: "tag_glob_csv"
-            rule_value:
-              "{{ tags }}"
-          external_registry_password: "{{ UPSTREAM_PASSWORD }}"
-          sync_interval: 500
-          robot_username: "{{ robot_username }}"
+#  - name: "White list mgmt client-id in Quay's configuration"
+
+#  - name: "Rollout Quay deployment"
+
+#  - name: "Generate OAuth Token with admin scopre"
+
+#  - name: "Uploud Token to OCP as a secret in Quay's Project"
+
+#  - name: "Create cloudlet+mirror robot for mirroing of all applications"
