--- a/argocdod/apps/mongodb-operator/templates/crds.yaml
+++ b/argocdod/apps/mongodb-operator/templates/crds.yaml
@@ -850,6 +850,7 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: mongodb-enterprise-operator-mongodb-webhook
+  namespace: {{ .Values.namespace }}
 rules:
 - apiGroups:
   - "admissionregistration.k8s.io"
