--- a/argocdod/apps/mongodb-operator/templates/operator-roles.yaml
+++ b/argocdod/apps/mongodb-operator/templates/operator-roles.yaml
@@ -106,6 +106,7 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ .Values.operator.name }}-{{ .Values.namespace }}-certs
+  namespace: {{ .Values.namespace }}
 rules:
 - apiGroups:
   - certificates.k8s.io
