--- a/argocdod/apps/mongodb-operator/templates/opsmanager_cr.yaml
+++ b/argocdod/apps/mongodb-operator/templates/opsmanager_cr.yaml
@@ -3,6 +3,7 @@ apiVersion: mongodb.com/v1
 kind: MongoDBOpsManager
 metadata:
   name: mongodb-opsmanager
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.opsmanagercr.replicas }}
   version: {{ .Values.opsmanagercr.version }}
