--- a/argocdod/apps/collectorforopenshift/values.yaml
+++ b/argocdod/apps/collectorforopenshift/values.yaml
@@ -6,4 +6,4 @@ config_map:
   #splunk_url: "https://13.90.23.80:8088/services/collector/event"
   #splunk_token: "bfb0ea00-fad4-4166-9f20-2e7fedda26fb"
   cluster_name: cloudlet-ocp43-offline-redhat
-  license_key: "Qkw4TlVBOFJTSE9TVTo0MDA6MTU5NDA0NzY1Nzoy.d95rME87sUw1BkxWJDESANJbMr7PFiEEOXHZAg.MOVIiXtIwEQzMAmBFDOnSIm+RkCrHaP7LQthPg"
+  license_key: Qkw4TlVBOFJTSE9TVTo0MDA6MTU5NDA0NzY1Nzoy.d95rME87sUw1BkxWJDESANJbMr7PFiEEOXHZAg.MOVIiXtIwEQzMAmBFDOnSIm+RkCrHaP7LQthPg
