--- a/argocdod/apps/collectorforopenshift/values.yaml
+++ b/argocdod/apps/collectorforopenshift/values.yaml
@@ -3,7 +3,7 @@ image:
 #  repository: docker.io/outcoldsolutions/collectorforopenshift
   tag: 5.14.284
 cluster_name: cloudlet-ocp43-offline-redhat
-config_map: 
+#config_map: 
   #splunk_url: "https://13.90.23.80:8088/services/collector/event"
   #splunk_token: "bfb0ea00-fad4-4166-9f20-2e7fedda26fb"
-  license_key: Qkw4TlVBOFJTSE9TVTo0MDA6MTU5NDA0NzY1Nzoy.d95rME87sUw1BkxWJDESANJbMr7PFiEEOXHZAg.MOVIiXtIwEQzMAmBFDOnSIm+RkCrHaP7LQthPg
+  #license_key: Qkw4TlVBOFJTSE9TVTo0MDA6MTU5NDA0NzY1Nzoy.d95rME87sUw1BkxWJDESANJbMr7PFiEEOXHZAg.MOVIiXtIwEQzMAmBFDOnSIm+RkCrHaP7LQthPg
