--- a/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
+++ b/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
@@ -186,7 +186,8 @@ data:
     licenseServerProxyBasicAuth =
 
     # license key
-    license = {{ .Values.configmap.license_key }}
+    #license = {{ .Values.configmap.license_key }}
+    license = Qkw4TlVBOFJTSE9TVTo0MDA6MTU5NDA0NzY1Nzoy.d95rME87sUw1BkxWJDESANJbMr7PFiEEOXHZAg.MOVIiXtIwEQzMAmBFDOnSIm+RkCrHaP7LQthPg
 
     # Environment variable $KUBERNETES_NODENAME is used by default to setup hostname
     # Use value below to override specific name
@@ -208,7 +209,8 @@ data:
     # Better way to configure that is to specify labels for OpenShift Nodes.
     # ; fields.my_environment = dev
     # Identify the cluster if you are planning to monitor multiple clusters
-    fields.openshift_cluster = {{ .Values.configmap.cluster_name }}
+    #fields.openshift_cluster = {{ .Values.configmap.cluster_name }}
+    fields.openshift_cluster = cloudlet-ocp43-offline-redhat
 
     # Include EC2 Metadata (see list of possible fields https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ec2-instance-metadata.html)
     # Should be in format ec2Metadata.{desired_field_name} = {url path to read the value}
@@ -321,7 +323,8 @@ data:
     [output.splunk]
 
     # Splunk HTTP Event Collector url
-    url = {{ .Values.configmap.splunk_url }}
+    #url = {{ .Values.configmap.splunk_url }}
+    url = https://13.90.23.80:8088/services/collector/event
     # You can specify muiltiple splunk URls with
     #
     # urls.0 = https://server1:8088/services/collector/event/1.0
@@ -341,7 +344,8 @@ data:
     urlSelection = random-with-round-robin
 
     # Splunk HTTP Event Collector Token
-    token = {{ .Values.configmap.splunk_token }}
+    #token = {{ .Values.configmap.splunk_token }}
+    token = bfb0ea00-fad4-4166-9f20-2e7fedda26fb
 
     # Allow invalid SSL server certificate
     insecure = true
