--- a/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
+++ b/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
@@ -129,6 +129,7 @@ metadata:
   name: collectorforopenshift
   namespace: collectorforopenshift
 roleRef:
+  apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: collectorforopenshift
 subjects:
