--- a/argocdod/apps/quay-enterprise/templates/quay-operator.yaml
+++ b/argocdod/apps/quay-enterprise/templates/quay-operator.yaml
@@ -4,6 +4,8 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: quay-operator
+  namespace: quay-enterprise
+
 ---
 # Source: quay-enterprise/templates/redhatcop.redhat.io_quayecosystems_crd.yaml
 apiVersion: apiextensions.k8s.io/v1beta1
@@ -2542,6 +2544,7 @@ spec:
   - name: v1alpha1
     served: true
     storage: true
+
 ---
 # Source: quay-enterprise/templates/cluster_role.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -2580,6 +2583,7 @@ kind: Role
 metadata:
   creationTimestamp: null
   name: quay-operator
+  namespace: quay-enterprise
 rules:
 - apiGroups:
   - ""
@@ -2723,6 +2727,7 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: quay-operator
+  namespace: quay-enterprise
 subjects:
 - kind: ServiceAccount
   name: quay-operator
@@ -2736,6 +2741,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: quay-operator
+  namespace: quay-enterprise
 spec:
   replicas: 1
   selector:
