--- a/CrunchyPGO/crunchy-cluster/templates/primaryuser-secret.yaml
+++ b/CrunchyPGO/crunchy-cluster/templates/primaryuser-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
-data:
-  password: cGFzc3dvcmQ=
-  username: cHJpbWFyeXVzZXI=
+stringData:
+  password: "{{.Values.password}}"
+  username: primaryuser
 kind: Secret
 metadata:
   labels:
