--- a/CrunchyPGO/crunchy-cluster/templates/myuser-secret.yaml
+++ b/CrunchyPGO/crunchy-cluster/templates/myuser-secret.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
-data:
-  password: cGFzc3dvcmQ=
-  username: bXl1c2Vy
+stringData:
+  password: "{{.Values.password}}"
+  username: "{{.Values.username}}"
 kind: Secret
 metadata:
   labels:
     pg-cluster: "{{.Values.cluster_name }}"
-  name: "{{.Values.cluster_name}}-otheruser-secret"
+  name: "{{.Values.cluster_name}}-myuser-secret"
   namespace: "{{.Values.namespace}}"
 type: Opaque
