--- a/face-detection/Dockerfiles/Dockerfile
+++ b/face-detection/Dockerfiles/Dockerfile
@@ -10,8 +10,8 @@ RUN chmod 777 /home/app_gpu
 ADD . /home/app_gpu
 
 RUN ls -l 
-RUN python --version
-RUN pip install -r req.txt
+RUN apt install python3
+RUN pip3 install -r req.txt
 
 RUN chown app_gpu:app_gpu ./ -R
 
