--- a/face-detection/Dockerfiles/Dockerfile
+++ b/face-detection/Dockerfiles/Dockerfile
@@ -1,5 +1,5 @@
 #FROM docker.io/tiangolo/python-machine-learning:cuda9.1-python3.7
-FROM nvidia/opencl:runtime-centos7
+FROM nvidia/opencl:runtime-ubuntu18.04
 
 RUN adduser --disabled-password --gecos '' app_gpu
 
@@ -11,7 +11,7 @@ ADD . /home/app_gpu
 
 #RUN ls -l 
 RUN apt update
-RUN apt install python3 python3-pip libSM -y
+RUN apt install python3 python3-pip libSM.so.6 -y
 RUN pip3 install -r req.txt
 
 RUN chown app_gpu:app_gpu ./ -R
