--- a/face-detection/Dockerfiles/Dockerfile
+++ b/face-detection/Dockerfiles/Dockerfile
@@ -11,16 +11,16 @@ ADD . /home/app_gpu
 
 #RUN ls -l 
 RUN apt update
-RUN apt install python3 python3-pip libsm6 -y
+RUN apt install python3 python3-pip libsm6 libxrender1 -y 
 RUN pip3 install -r req.txt
 
 RUN chown app_gpu:app_gpu ./ -R
 
-RUN ls -l
+#RUN ls -l
 
 USER app_gpu
 
-RUN ls -l
+#RUN ls -l
 
 CMD ["python3" , "main.py"]
 
