--- a/argocdod/apps/quay-enterprise/templates/quay-enterprise.yaml
+++ b/argocdod/apps/quay-enterprise/templates/quay-enterprise.yaml
@@ -48,8 +48,6 @@ type: Opaque
 # Source: quay-enterprise/templates/08_quayconfigfile.yaml
 apiVersion: v1
 data:
-  configmore.yaml: >-
-    QVBQX1NQRUNJRklDX1RPS0VOX0VYUElSQVRJT046IDNtCkZFQVRVUkVfQU5PTllNT1VTX0FDQ0VTUzogZmFsc2UKRkVBVFVSRV9JTlZJVEVfT05MWV9VU0VSX0NSRUFUSU9OOiBmYWxzZQpGRUFUVVJFX1BBUlRJQUxfVVNFUl9BVVRPQ09NUExFVEU6IGZhbHNlCkZFQVRVUkVfUkVRVUlSRV9FTkNSWVBURURfQkFTSUNfQVVUSDogdHJ1ZQo=
 kind: Secret
 metadata:
   annotations:
@@ -134,6 +132,7 @@ spec:
     configFiles:
       - secretName: trust-ca
         type: extraCaCert
+      - secretName: quayconfigfile
     livenessProbe:
       initialDelaySeconds: 420
       httpGet:
